[package]
name = "rsmnl-linux"
version = "0.2.1"
authors = ["Ken-ichirou MATSUZAWA <chamas@h4.dion.ne.jp>"]
repository = "https://github.com/chamaken/rsmnl-linux"
keywords = ["netlink", "netfilter"]
license-file = "COPYING"
readme = "README.md"
description = "linux headers for rsmnl"

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "*"
errno = "*"
rsmnl = { path = "../rsmnl-core" }
rsmnl-linux-derive = { path = "rsmnl-derive" }

[dev-dependencies] # for examples
mio = "*"
pnet = "*"

[dependencies.mio]
features = ["os-poll", "os-util", "udp"]
