[package]
name = "rsmnl-linux"
version = "0.1.0"
authors = ["Ken-ichirou MATSUZAWA <chamas@h4.dion.ne.jp>"]
repository = "https://github.com/chamaken/rsmnl-linux"
keywords = ["netlink", "netfilter", "rsmnl"]
license-file = "COPYING"
readme = "README.md"
description = "linux headers for rsmnl"

autoexamples = false

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "0.2.101"
errno = "0.2.7"
rsmnl = "0.1.0"
rsmnl-derive = "0.1.0"

[dev-dependencies] # for examples
mio = { version = "0.7.13", features = ["os-poll", "os-util", "udp"] }
chrono = "0.4"
crossbeam-channel = "0.5.1"
once_cell = "1.8.0"
bit-vec = "0.6.3"

[[example]]
name = "genl-family-get"
path = "examples/genl/genl-family-get.rs"

[[example]]
name = "rtnl-addr-dump"
path = "examples/rtnl/rtnl-addr-dump.rs"

[[example]]
name = "rtnl-link-dump"
path = "examples/rtnl/rtnl-link-dump.rs"

[[example]]
name = "rtnl-link-event"
path = "examples/rtnl/rtnl-link-event.rs"

[[example]]
name = "rtnl-link-set"
path = "examples/rtnl/rtnl-link-set.rs"

[[example]]
name = "rtnl-neigh-dump"
path = "examples/rtnl/rtnl-neigh-dump.rs"

[[example]]
name = "rtnl-route-add"
path = "examples/rtnl/rtnl-route-add.rs"

[[example]]
name = "rtnl-route-dump"
path = "examples/rtnl/rtnl-route-dump.rs"

[[example]]
name = "rtnl-route-event"
path = "examples/rtnl/rtnl-route-event.rs"

[[example]]
name = "nf-log"
path = "examples/netfilter/nf-log.rs"

[[example]]
name = "nf-queue"
path = "examples/netfilter/nf-queue.rs"

[[example]]
name = "nfct-create-batch"
path = "examples/netfilter/nfct-create-batch.rs"

[[example]]
name = "nfct-daemon"
path = "examples/netfilter/nfct-daemon.rs"

[[example]]
name = "nfct-dump"
path = "examples/netfilter/nfct-dump.rs"

[[example]]
name = "nfct-event"
path = "examples/netfilter/nfct-event.rs"

[[example]]
name = "nfct-stats"
path = "examples/netfilter/nfct-stats.rs"

[[example]]
name = "ipfix"
path = "examples/ipfix/main.rs"
